# K8sCronJobPostgresBackup

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: build_docker_image.yaml  publish_package.yaml
bash_shell/: pg_cluster_bkp.sh
data/: 2022-01-11_test_pg_bck.sql
dbsavior/: DbBackupRestoreBot.py  main.py
dbsavior/db/: PostgresDbManager.py
docs/: Install_postgresql_server_ubuntu.md  Postgres_db_backup_restore.md  usefull_sql_command.md
k8s/: cronjob_backup.yaml  job_backup.yaml  job_populate.yaml  job_restore.yaml
k8s/job_with_creds/: cronjob_backup.yaml  job_backup.yaml  job_populate.yaml  job_restore.yaml
k8s/job_with_creds_configMap/: cronjob_backup.yaml  db_config.yaml  job_backup.yaml  job_populate.yaml  job_restore.yaml
k8s/job_with_params/: cronjob_backup.yaml  job_backup.yaml  job_restore.yaml
k8s/secrets/: s3_secret.yaml
src/: DbBackupBot.py  DbBackupRestoreBot.py  DbManagerInterface.py  DbRestoreBot.py  PostgresDbManager.py  S3StorageEngine.py  StorageEngineInterface.py  __init__.py  main.py  util.py
src/bash_shell/: pg_bkp.sh
src/db/: DbManagerInterface.py  PostgresDbManager.py
src/python/: PostgresDbManager.py  S3StorageEngine.py  postgres_bkp.py  postgres_db_manager.py
src/storage/: LocalStorageEngine.py  S3StorageEngine.py  StorageEngineInterface.py
tests/: PostgresDbManagerTest.py  PostgresDbManager_test.py  S3StorageEngineTest.py  S3StorageEngine_test.py
