[tool.poetry]
name = "k8scronjobpostgresbackup"
version = "0.1.0"
description = ""
authors = ["Liu Pengfei <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20.27"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
